chore: update README — ZGC JVM args, batch 8 complete in progress table